@@ -66,17 +66,24 @@ else
 endif
 
 ifeq ($(CROSSDEV),arm-elf-)
+  MKDEP			= $(TOPDIR)/tools/mkdeps.sh
   ARCHCPUFLAGS		= -mtune=cortex-m3 -march=armv7-m -mfloat-abi=soft
+  ARCHINCLUDES		= -I. -isystem $(TOPDIR)/include
+  ARCHXXINCLUDES	= -I. -isystem $(TOPDIR)/include -isystem $(TOPDIR)/include/cxx
+  ARCHSCRIPT		= -T$(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/httpd/ld.script
 else
+  WINTOOL		= y
+  DIRLINK 		= $(TOPDIR)/tools/winlink.sh
+  DIRUNLINK		= $(TOPDIR)/tools/unlink.sh
+  MKDEP			= $(TOPDIR)/tools/mknulldeps.sh
   ARCHCPUFLAGS		= -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
+  ARCHINCLUDES		= -I. -isystem "${shell cygpath -w $(TOPDIR)/include}"
+  ARCHXXINCLUDES	= -I. -isystem "${shell cygpath -w $(TOPDIR)/include}" -isystem "${shell cygpath -w $(TOPDIR)/include/cxx}"
+  ARCHSCRIPT		= -T "${shell cygpath -w $(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/httpd/ld.script}"
 endif
 
 ARCHDEFINES		=
-ARCHINCLUDES		= -I. -isystem $(TOPDIR)/include
-ARCHXXINCLUDES		= -I. -isystem $(TOPDIR)/include -isystem $(TOPDIR)/include/cxx
-
 ARCHPICFLAGS		= -fpic
-ARCHSCRIPT		= -T$(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/httpd/ld.script
 
 CFLAGS			= $(ARCHCFLAGS) $(ARCHWARNINGS) $(ARCHOPTIMIZATION) \
 			  $(ARCHCPUFLAGS) $(ARCHINCLUDES) $(ARCHDEFINES) -pipe
@@ -124,8 +131,6 @@ endef
 define CLEAN
 	@rm -f *.o *.a
 endef
-
-MKDEP			= $(TOPDIR)/tools/mkdeps.sh
 
 HOSTCC			= gcc
 HOSTINCLUDES		= -I.
