@@ -767,5 +767,6 @@
 	  specific directories.
 	* config/olimex-strp711/src/up_nsh.c:  Add an NSH board specific directory for
 	  for the Olimex STR7P11 board.
-
-
+	* Fixed build of LM3X6918 using the CodeSourcery Windows native toolchain.  There
+	  were lots of issues with Cygwin paths and Cygwin symbolic links.  These changes
+	  may work with the devarmKIT as well, but that remains untested.
